// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleAddOrderRequest 1`] = `
Array [
  Array [
    Object {
      "balance": -1,
      "method": "add",
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "requestor": "relayer",
      "side": "side",
      "signedOrder": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "status": "confirmed",
    },
  ],
]
`;

exports[`handleAddOrderRequest 2`] = `
Array [
  Array [
    Object {},
    Object {
      "userOrder": "userOrder",
    },
    "add",
  ],
]
`;

exports[`handleAddOrderRequest invalid order 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xOrderHash",
      "pair": "pair",
    },
    "invalid order",
  ],
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xInvalidHash",
      "pair": "pair",
    },
    "invalid order",
  ],
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xOrderHash",
      "pair": "pair",
    },
    "invalid order",
  ],
]
`;

exports[`handleAddOrderRequest invalid persist 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xOrderHash",
      "pair": "pair",
    },
    "invalid order",
  ],
]
`;

exports[`handleAddOrderRequest persist error 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "add",
      "order": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
      "orderHash": "0xOrderHash",
      "pair": "pair",
    },
    "error",
  ],
]
`;

exports[`handleOrderBookRequest invalid method 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "invalid request",
  ],
]
`;

exports[`handleOrderBookRequest subscribe 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "subscribe",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderBookRequest unsubscribe 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "unsubscribe",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderBookSubscribeRequest empty list 1`] = `
Array [
  Array [
    "pair",
    [Function],
  ],
]
`;

exports[`handleOrderBookSubscribeRequest empty list 2`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest empty list 3`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"snapshot\\",\\"channel\\":\\"orderBooks\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"orderBookSnapshot\\":\\"snapshot\\"}",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest existing pair existing ws 1`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest existing pair existing ws 2`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"snapshot\\",\\"channel\\":\\"orderBooks\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"orderBookSnapshot\\":\\"snapshot\\"}",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest existing pair new ws 1`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest existing pair new ws 2`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"snapshot\\",\\"channel\\":\\"orderBooks\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"orderBookSnapshot\\":\\"snapshot\\"}",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest new pair 1`] = `
Array [
  Array [
    "pair",
    [Function],
  ],
]
`;

exports[`handleOrderBookSubscribeRequest new pair 2`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest new pair 3`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"snapshot\\",\\"channel\\":\\"orderBooks\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"orderBookSnapshot\\":\\"snapshot\\"}",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest new pair no snapshot 1`] = `
Array [
  Array [
    "pair",
    [Function],
  ],
]
`;

exports[`handleOrderBookSubscribeRequest new pair no snapshot 2`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`handleOrderBookSubscribeRequest new pair no snapshot 3`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "error",
  ],
]
`;

exports[`handleOrderBookUnsubscribeRequest 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "ok",
  ],
]
`;

exports[`handleOrderBookUnsubscribeRequest existing pair non existing ws 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "ok",
  ],
]
`;

exports[`handleOrderBookUnsubscribeRequest no more subscription 1`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`handleOrderBookUnsubscribeRequest no more subscription 2`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "ok",
  ],
]
`;

exports[`handleOrderBookUnsubscribeRequest non existing pair 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "ok",
  ],
]
`;

exports[`handleOrderBookUpdate 1`] = `
Array [
  Array [
    "ws1",
    "{\\"method\\":\\"update\\",\\"channel\\":\\"orderBooks\\",\\"status\\":\\"ok\\",\\"pair\\":\\"code1|code2\\",\\"orderBookUpdate\\":\\"any\\"}",
  ],
  Array [
    "ws2",
    "{\\"method\\":\\"update\\",\\"channel\\":\\"orderBooks\\",\\"status\\":\\"ok\\",\\"pair\\":\\"code1|code2\\",\\"orderBookUpdate\\":\\"any\\"}",
  ],
]
`;

exports[`handleOrderHistorySubscribeRequest existing account existing pair new ws 1`] = `
Object {
  "pair": Object {
    "account": Array [
      "ws",
      "ws1",
    ],
  },
}
`;

exports[`handleOrderHistorySubscribeRequest existing account existing pair new ws 2`] = `
Array [
  Array [
    "ws1",
    "{\\"method\\":\\"history\\",\\"channel\\":\\"orders\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"orderHistory\\":[\\"userOrders\\"]}",
  ],
]
`;

exports[`handleOrderHistorySubscribeRequest existing pair existing account same ws 1`] = `
Object {
  "pair": Object {
    "account": Array [
      "ws",
    ],
  },
}
`;

exports[`handleOrderHistorySubscribeRequest existing pair existing account same ws 2`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"history\\",\\"channel\\":\\"orders\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"orderHistory\\":[\\"userOrders\\"]}",
  ],
]
`;

exports[`handleOrderHistorySubscribeRequest new pair 1`] = `
Object {
  "pair": Object {
    "account": Array [
      "ws",
      "ws1",
    ],
  },
  "pair1": Object {
    "account": Array [
      "ws",
    ],
  },
}
`;

exports[`handleOrderHistorySubscribeRequest new pair 2`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"history\\",\\"channel\\":\\"orders\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair1\\",\\"orderHistory\\":[\\"userOrders\\"]}",
  ],
]
`;

exports[`handleOrderHistorySubscribeRequest new pair 3`] = `
Array [
  Array [
    "pair1",
    [Function],
  ],
]
`;

exports[`handleOrderHistorySubscribeRequest new pair new account  1`] = `
Object {
  "pair": Object {
    "account": Array [
      "ws",
    ],
  },
}
`;

exports[`handleOrderHistorySubscribeRequest new pair new account  2`] = `
Array [
  Array [
    "ws",
    "{\\"method\\":\\"history\\",\\"channel\\":\\"orders\\",\\"status\\":\\"ok\\",\\"pair\\":\\"pair\\",\\"orderHistory\\":[\\"userOrders\\"]}",
  ],
]
`;

exports[`handleOrderHistorySubscribeRequest new pair new account  3`] = `
Array [
  Array [
    "pair",
    [Function],
  ],
]
`;

exports[`handleOrderHistoryUnsubscribeRequest existing account clear up 1`] = `Object {}`;

exports[`handleOrderHistoryUnsubscribeRequest existing account clear up 2`] = `
Array [
  Array [
    "ws",
    Object {
      "account": "account",
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "ok",
  ],
]
`;

exports[`handleOrderHistoryUnsubscribeRequest existing account clear up 3`] = `
Array [
  Array [
    "pair",
  ],
]
`;

exports[`handleOrderHistoryUnsubscribeRequest existing account existing pair more than one 1`] = `
Object {
  "pair": Object {
    "account": Array [
      "ws",
    ],
  },
}
`;

exports[`handleOrderHistoryUnsubscribeRequest existing account existing pair more than one 2`] = `
Array [
  Array [
    "ws1",
    Object {
      "account": "account",
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "ok",
  ],
]
`;

exports[`handleOrderHistoryUnsubscribeRequest existing pair existing account 1`] = `
Object {
  "pair": Object {
    "account": Array [
      "ws",
      "ws1",
    ],
  },
}
`;

exports[`handleOrderHistoryUnsubscribeRequest existing pair existing account 2`] = `
Array [
  Array [
    "ws",
    Object {
      "account": "account",
      "channel": "channel",
      "method": "method",
      "pair": "pair1",
    },
    "ok",
  ],
]
`;

exports[`handleOrderHistoryUnsubscribeRequest existing pair existing account 3`] = `
Array [
  Array [
    "pair1",
  ],
]
`;

exports[`handleOrderHistoryUnsubscribeRequest new account 1`] = `Object {}`;

exports[`handleOrderHistoryUnsubscribeRequest new account 2`] = `
Array [
  Array [
    "ws",
    Object {
      "account": "account",
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "ok",
  ],
]
`;

exports[`handleOrderRequest add 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "orders",
      "method": "add",
      "orderHash": "0xOrderHash",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderRequest invalid requests 1`] = `
Array [
  Array [
    "ws",
    Object {
      "account": "",
      "channel": "orders",
      "method": "subscribe",
      "pair": "pair",
    },
    "invalid request",
  ],
  Array [
    "ws",
    Object {
      "account": "",
      "channel": "orders",
      "method": "unsubscribe",
      "pair": "pair",
    },
    "invalid request",
  ],
  Array [
    "ws",
    Object {
      "channel": "orders",
      "method": "method",
      "pair": "pair",
    },
    "invalid request",
  ],
]
`;

exports[`handleOrderRequest subscribe 1`] = `
Array [
  Array [
    "ws",
    Object {
      "account": "account",
      "channel": "orders",
      "method": "subscribe",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderRequest terminate 1`] = `
Array [
  Array [
    "ws",
    Object {
      "channel": "orders",
      "method": "terminate",
      "orderHash": "0xOrderHash",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderRequest unsubscribe 1`] = `
Array [
  Array [
    "ws",
    Object {
      "account": "account",
      "channel": "orders",
      "method": "unsubscribe",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderUpdate requested existing pair existing account 1`] = `
Array [
  Array [
    "ws",
    "userOrder",
    "method",
  ],
  Array [
    "ws1",
    "userOrder",
    "method",
  ],
]
`;

exports[`handleTerminateOrderRequest 1`] = `
Array [
  Array [
    Object {
      "balance": -1,
      "method": "terminate",
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "requestor": "relayer",
      "status": "confirmed",
    },
  ],
]
`;

exports[`handleTerminateOrderRequest 2`] = `
Array [
  Array [
    Object {},
    Object {
      "userOrder": "userOrder",
    },
    "terminate",
  ],
]
`;

exports[`handleTerminateOrderRequest invalid request and order 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "terminate",
      "orderHash": "",
      "pair": "pair",
    },
    "invalid request",
  ],
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "terminate",
      "orderHash": "0xOrderHash",
      "pair": "pair",
    },
    "invalid order",
  ],
]
`;

exports[`handleTerminateOrderRequest persist error 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "terminate",
      "orderHash": "0xOrderHash",
      "pair": "pair",
    },
    "error",
  ],
]
`;

exports[`handleWebSocketMessage invalid requests 1`] = `
Array [
  Array [
    "ws",
    Object {},
    "invalid request",
  ],
  Array [
    "ws",
    Object {
      "channel": "channel",
      "method": "method",
      "pair": "pair",
    },
    "invalid request",
  ],
  Array [
    "ws",
    Object {
      "channel": "orders",
      "method": "",
      "pair": "pair",
    },
    "invalid request",
  ],
  Array [
    "ws",
    Object {
      "channel": "orders",
      "method": "method",
      "pair": "test",
    },
    "invalid request",
  ],
]
`;

exports[`handleWebSocketMessage orderBooks 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orderBooks",
      "method": "method",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleWebSocketMessage orders 1`] = `
Array [
  Array [
    Object {},
    Object {
      "channel": "orders",
      "method": "method",
      "pair": "pair",
    },
  ],
]
`;

exports[`sendErrorOrderResponse 1`] = `
Array [
  Array [
    "{\\"method\\":\\"method\\",\\"channel\\":\\"channel\\",\\"status\\":\\"status\\",\\"pair\\":\\"pair\\",\\"orderHash\\":\\"0xOrderHash\\"}",
  ],
]
`;

exports[`sendInfo 1`] = `
Array [
  Array [
    "{\\"channel\\":\\"info\\",\\"method\\":\\"info\\",\\"status\\":\\"ok\\",\\"pair\\":\\"\\",\\"tokens\\":[\\"token1\\"],\\"processStatus\\":[\\"status1\\"]}",
  ],
]
`;

exports[`sendResponse 1`] = `
Array [
  Array [
    "{\\"method\\":\\"method\\",\\"channel\\":\\"channel\\",\\"status\\":\\"status\\",\\"pair\\":\\"pair\\"}",
  ],
]
`;

exports[`sendUserOrderResponse 1`] = `
Array [
  Array [
    "{\\"method\\":\\"type\\",\\"channel\\":\\"orders\\",\\"status\\":\\"ok\\",\\"userOrder\\":{\\"test\\":\\"liveOrder\\"}}",
  ],
]
`;
